基本完成图书系统

--- a/views/shared/_footer_nav.html
+++ b/views/shared/_footer_nav.html
@@ -1,4 +1,4 @@
-        <div class="weui-tabbar">
+        <div class=" weui-tabbar" id="footer">
             <a href="/books/types" class="weui-tabbar__item">
                 <span style="display: inline-block;position: relative;">
                         <!-- <img src="./images/icon_tabbar.png" alt="" class="weui-tabbar__icon"> -->
