--- a/views/books/book_list.html
+++ b/views/books/book_list.html
@@ -36,7 +36,8 @@
                                     <div class="weui-media-box__bd">
                                         <h4 class="weui-media-box__title">${item.title}</h4>
                                         <p class="weui-media-box__desc">${item.author}</p>
-                                        <p class="weui-media-box__desc"><button onclick="doBuy('${item.id}')" class="weui-btn weui-btn_mini weui-btn_warn">购买</button></p>
+                                        <p class="weui-media-box__desc">
+                                        <button onclick="doBuy('${item._id}')" class="weui-btn weui-btn_mini weui-btn_warn">购买</button></p>
                                     </div>
                                 </a>`
                     })
@@ -54,10 +55,12 @@
             }
             loadData()
         })
+
         function doBuy(id){
+            console.log(id)
             if({{isLogined}}){
                 ////执行购买操作
-                // alert('购买成功')
+                alert('购买成功')
                 //通过jQuery.cookie插件获取cookie中的用户id
                 //在localStorage为当前用户添加一个购买信息
                 //[{user:"1",books:[{id:"1"},{id:"2"},{id:"3"}]},
