--- a/views/shared/_header.html
+++ b/views/shared/_header.html
@@ -1,4 +1,4 @@
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="/admin/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/weui.css">
     <link rel="stylesheet" href="/css/style.css">
