--- a/views/users/userinfo.html
+++ b/views/users/userinfo.html
@@ -3,20 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <title>登录</title>
+    <!-- <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" type="text/css" href="/css/userinfo.css">
     {{include '../shared/_header'}}
+    <style>
+
+    </style>
 </head>
 <body>
 <div class="weui-toptips weui-toptips_warn js_tooltips weui-icon-warn" id="errTip" style="display: none;">错误提示</div>
 <div class="weui-toptips weui-toptips_warn weui-toptips_success weui-icon-success js_tooltips" id="successTip" style="display: none;">注册成功</div>
 	<div class="weui-tab">
-		<div class="weui-tab__panel">
+         <header>
+            <div>
+                <img src="/img/header-1.gif" alt="头部返回">
+            </div>
+            <div>个人中心</div>
+            <div>
+                <img src="/img/header-2.gif" alt="">
+            </div>
+      </header>
+      <section id="b1">
+         <div class="new_info">
+             <div class="name">
+                <h2>{{user.name}}({{user.mobile}})</h2>
+             </div>
+             <div class="islogo">
+               <b>+</b>
+            </div>
+         </div>
+         <div class="new_nav">
+           <ul>
+             <li>
+               <div class="logo a1"></div>
+               <p>全部订单</p>
+               <div class="line r1"></div>
+             </li>
+             <li>
+               <div class="logo a2"></div>
+               <p>待付款</p>
+               <div class="line r2"></div>
+             </li>
+              <li>
+                <div class="logo a3"></div>
+               <p>待收货</p>
+               <div class="line r3"></div>
+             </li>
+           </ul>
+         </div>
+      </section>
+      <div class="clear"></div>
+<!--       <section id="list">
+        <ul class="list-group">
+          <li class="list-group-item">我的优惠</li>
+          <li  class="list-group-item">个人信息</li>
+        </ul>
+        <ul class="list-group">
+          <li class="list-group-item"><a>我的服务</a></li>
+        </ul>
+         <ul class="list-group">
+          <li class="list-group-item">我的设置</li>
+        </ul>
+      </section> -->
+<!-- 		<div class="weui-tab__panel">
 		    <p>{{user.name}}</p>
 		    <p>{{user.mobile}}</p>
 		    <p>{{user.email}}</p>
-		</div>
+		</div> -->
 		{{include '../shared/_footer_nav'}}
 	 </div>
-
     {{include '../shared/_bottom'}}
+<!--     <script src="http://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.js"></script> -->
 </body>
 </html>
